Fix messy looking footer - break into three lines and properly align 'contact me' image. Add a divider above footer for clarity.

--- a/css/site.css
+++ b/css/site.css
@@ -31,8 +31,14 @@ p {
 }
 
 #footer {
-  text-align: left;
+  text-align: center;
   font-size: 0.8em;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+}
+
+#footer .content a img {
+  vertical-align: middle;
 }
 
 .comments {
